Fix incorrect query ranges generated by timeline chart.
This appears to have no effect on how the chart selection is now rendered; this code previously added one 'datasetPrecision' unit to the selection end date to work around a selection rendering issue.

Add a 1 pixel top margin to the chart clear selection label so that it does not overlap the x-axis.

--- a/app/styles/dataCards/timeline-chart.sass
+++ b/app/styles/dataCards/timeline-chart.sass
@@ -91,6 +91,7 @@ $fill-opacity: 0.5
 .timeline-chart-clear-selection-label
   display: none
   position: absolute
+  margin-top: 1px
   height: 100%
   font-weight: bold
   line-height: 30px
